// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Block Block with Markdown 1`] = `
<div
  class="h-full p-fluid"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        Futur Markdown
      </h3>
       
      <div
        class="lck-color-content"
      >
        
  En cours d'implémentation

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with Paragraph (Text) 1`] = `
<div
  class="h-full p-fluid"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        Titre
      </h3>
       
      <div
        class="lck-color-content"
      >
        
  Je suis un texte.

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with TableView 1`] = `
<div
  class="h-full p-fluid"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        My TableView's block
      </h3>
       
      <div>
        <div
          class="
      p-datatable-sm
      p-datatable-gridlines
      p-d-flex
      d-flex-1
      p-flex-column
      justify-between
     p-datatable p-component"
          style="width: 450px;"
        >
          <!---->
          <!---->
          <!---->
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <!---->
                 
                <tr
                  class=""
                />
                 
                <!---->
                 
                <!---->
                <!---->
                 
                <tr
                  class=""
                />
                 
                <!---->
                 
                <!---->
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="p-paginator p-component"
          limit="10"
        >
          <!---->
           
          <button
            class="p-paginator-first p-paginator-element p-link p-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-left"
            />
            <span
              class="p-ink"
            />
          </button>
          <button
            class="p-paginator-prev p-paginator-element p-link p-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-left"
            />
            <span
              class="p-ink"
            />
          </button>
          <span
            class="p-paginator-pages"
          >
            <button
              class="p-paginator-page p-paginator-element p-link p-highlight"
              type="button"
            >
              1
              <span
                class="p-ink"
              />
            </button>
          </span>
          <button
            class="p-paginator-next p-paginator-element p-link p-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-right"
            />
            <span
              class="p-ink"
            />
          </button>
          <button
            class="p-paginator-last p-paginator-element p-link p-disabled"
            disabled="disabled"
            type="button"
          >
            <span
              class="p-paginator-icon pi pi-angle-double-right"
            />
            <span
              class="p-ink"
            />
          </button>
          <span
            class="p-paginator-current"
          >
            De 1 à 2 sur 2 résultat(s)
          </span>
           
          <div
            class="p-paginator-right-content"
          >
            <div
              class="paginator-nav"
            >
              <p
                class="label"
              >
                Aller à la page
              </p>
               
              <div
                class="p-dropdown p-component p-inputwrapper"
                dropdown="true"
              >
                <div
                  class="p-hidden-accessible"
                >
                  <input
                    aria-haspopup="listbox"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                 
                <!---->
                 
                <span
                  class="p-dropdown-label p-inputtext"
                >
                  
            1
        
                </span>
                 
                <!---->
                 
                <div
                  aria-haspopup="listbox"
                  class="p-dropdown-trigger"
                  role="button"
                >
                  <span
                    class="p-dropdown-trigger-icon pi pi-chevron-down"
                  />
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with unknown type 1`] = `
<div
  class="h-full p-fluid"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        Not Known
      </h3>
       
      <span
        class="lck-color-content"
      >
        
      Ce type de block NotKnown n'existe pas.
    
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block without props 1`] = `
<div
  class="h-full p-fluid"
>
  <div>
    <span
      class="lck-color-content"
    >
      
    Le type de block n'existe pas.
  
    </span>
  </div>
</div>
`;
